# point_of_sale

./: .editorconfig  .gitignore  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  mypy.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_locations_and_skus.py  0003_inventory_ledger_balance_costlayer.py  0004_audit_outbox.py  0006_returns_and_rmas.py  0011_customers.py  0012_customer_audit_merge.py  0013_consent.py  0014_messaging.py  0015_link_customer_to_sales.py
backend/scripts/: check_openapi.py
backend/src/pos_inventory/: main.py
backend/src/pos_inventory/api/schemas/: common.py  consent.py  counts.py  customer_history.py  customer_messages.py  customers.py  returns.py  rmas.py  transfers.py
backend/src/pos_inventory/api/v1/: config.py  counts.py  customer_addresses.py  customer_consent.py  customer_history.py  customer_messages.py  customers.py  inventory.py  locations.py  message_templates.py  receipts.py  transfers.py
backend/src/pos_inventory/core/: audit.py  auth.py  config.py  errors.py  events.py  tenancy.py  visibility.py
backend/src/pos_inventory/domain/consent/: __init__.py  gate.py  service.py
backend/src/pos_inventory/domain/counts/: approve.py  service.py
backend/src/pos_inventory/domain/customer_history/: __init__.py  service.py
backend/src/pos_inventory/scripts/: seed_customers.py  seed_dev.py
backend/src/pos_inventory/workers/: outbox_worker.py
backend/tests/unit/: test_alembic_revisions.py
backend/tests/unit/api/: test_auth_roles.py
backend/tests/unit/domain/: test_ledger.py
(+189 files in other folders)
