[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pos_inventory"
version = "0.1.0"
description = "POS Inventory Management backend (FastAPI + Postgres)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "python-jose[cryptography]>=3.3",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "phonenumbers>=8.13",
  "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "faker>=25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pos_inventory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
pythonpath = ["src"]
